[tool.poetry]
name = "machinelearninga-z"
version = "0.1.0"
description = ""
authors = ["MakMemEng <yatani.mems4568@gmail.com>"]
readme = "README.md"
packages = [{include = "machinelearninga_z"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"
pandas = "^1"
scikit-learn = "^1.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
